# loansystem

backend/api/: Cargo.toml
backend/api/migrations/2024-02-02-080918_initialize/: down.sql  up.sql
backend/api/src/: lib.rs  main.rs  models.rs  schema.rs
backend/db/: compose.yaml
frontend/: package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/: app.html
frontend/src/lib/: index.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/devices/: +page.server.ts  +page.svelte
frontend/src/routes/devices/new/: +page.server.ts  +page.svelte
