[package]
name = "loansystem-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
diesel = "2.1.4"
diesel-async = { version = "0.4.1", features = ["postgres"] }
dotenvy = "0.15.7"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
